--- a/website/portfolioBackend/templates/contact/contact.html
+++ b/website/portfolioBackend/templates/contact/contact.html
@@ -1,13 +1,13 @@
 {% extends 'base1.html' %} {% block css %}{% endblock css %} {% block body %} 
-
-<div class='container'>
-    <div class="jumbotron jumbotron-fluid" style='color: darkblue; background-color: lightcoral;'>
-  <div class="container">
-    <h1 class="display-4">Hey Abhinav Anand, </h1>
-    <p class="lead">Let's check out what is going on in our Backend. Have a good Day</p>
+  <div class='container-fluid'>
+  <div class="card mt-2">
+  <h5 class="card-header">Featured</h5>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    {% comment %} <a href="#" class="btn btn-primary">Go somewhere</a> {% endcomment %}
   </div>
 </div>
-
 
 
 </div>
